@@ -82,6 +82,7 @@ Ver.5.6 (in development)
 - [BUG FIX] Fix buildup.sh to avoid double minify tinySHA1.js and sha256.js when using YUI Compressor.
 - [BUG FIX] Fix the MediaAccess class's generating cookie names.
 - [BUG FIX] FX 6.10 based DB_FileMaker_FX class reported error, but it's cause of modified path.
+- [BUG FIX] In some case, "the 'NumberFormat' class doesn't exist" message arose, but it was cared in class loader.
 - [SECURITY FIX] The resetpassword.php in Auth_Support/PasswordReset folder had security issues.
   If you use the resetpassword.php file in your solution. we'd like to replace the fixed version.
 - [FYI] The file Samples/sample_memo_html5.html is removed. It wasn't working in long time.
